# RoviosProject

./: README.md
Kalman/: CMakeLists.txt  package.xml
Kalman/launch/: kalman.launch
Kalman/src/: kalman_rovio.py
apprentissage_rovio/: pantiltmodel_x.plot  pantiltmodel_y.plot  positions.txt  svm_pantilt  svm_pantilt.cc  x.pred
detect/: CMakeLists.txt  package.xml
detect/launch/: det.launch  global.launch
detect/msg/: ArenaPositions.msg  Entity.msg  PanTilts.msg
detect/src/: detect.cpp
gngt/: CMakeLists.txt  package.xml
gngt/launch/: gngt.launch
gngt/src/: gngt.cpp  input.cpp
localize/: CMakeLists.txt  package.xml
localize/launch/: loc.launch
localize/src/: localize.cpp  y.pred
nav_kalman/: CMakeLists.txt  package.xml
nav_kalman/launch/: nav.launch
nav_kalman/src/: liste.txt  liste_tot.txt  nav_kalman.cpp
nav_points/: CMakeLists.txt  package.xml
nav_points/launch/: nav.launch
nav_points/src/: liste.txt  nav_points.cpp
nav_to_goal/: CMakeLists.txt  package.xml
nav_to_goal/launch/: nav.launch
nav_to_goal/src/: nav_to_goal.cpp
positions/: CMakeLists.txt  package.xml
positions/launch/: pos.launch
positions/src/: positions.cpp
sampler/: CMakeLists.txt  package.xml
sampler/launch/: s.launch  sample.launch
sampler/src/: liste.txt  positions.txt  sampler.cpp
share/: CMakeLists.txt  package.xml
share/launch/: sha.launch
share/src/: share.cpp
tracker/: CMakeLists.txt  package.xml
tracker/launch/: tr.launch
tracker/src/: tracker.cpp
